# gskill

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml
src/: evaluator.py  pipeline.py  skill.py  tasks.py
tests/: test_evaluator.py  test_main.py  test_skill.py  test_tasks.py
